# rust-project-api

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.fleet/: run.json
.run/: watch.run.xml
migrations/2023-09-02-205459_create_user_table/: up.sql
migrations/2023-09-06-145628_create_auths/: down.sql  up.sql
src/: database.rs  lib.rs  main.rs  schema.rs
src/api/: Cargo.toml  mod.rs
src/api/src/: lib.rs  types.rs
src/api/src/contracts/: auth_contract.rs  mod.rs  user_contract.rs
src/api/src/controllers/: auth.rs  health.rs  mod.rs  user.rs  wsocket.rs
src/api/src/helpers/: mod.rs
src/api/src/helpers/validation/: email.rs  mod.rs
src/api/src/middlewares/: auth.rs  mod.rs  permit.rs  request.rs
src/api/src/router/: mod.rs
src/api/src/router/v1/: auths.rs  mod.rs  users.rs
src/common/: Cargo.toml
src/common/src/: context.rs  lib.rs
src/common/src/configs/: app.rs  json.rs  mod.rs
src/common/src/database/: mod.rs  mongo.rs  source.rs
src/common/src/database/ampq/: manager.rs  mod.rs
src/common/src/database/redis/: manager.rs  mod.rs
src/common/src/drivers/: mod.rs
src/common/src/emails/: mod.rs
src/common/src/helpers/: error.rs  mod.rs  password.rs
src/common/src/traits/: service.rs
src/common/src/utilities/: jwt.rs  mod.rs
src/configs/: app.rs  constant.rs  json.rs  mod.rs  settings.rs
src/configs/src/: app.rs  constant.rs  json.rs  settings.rs
src/contracts/: Cargo.toml  _README.md  auth.rs  auth_contract.rs  user.rs  user_contract.rs
src/contracts/src/: lib.rs  user_contract.rs
src/controllers/: auth.rs  auth_controller.rs  auths.rs  health.rs  health_controller.rs  mod.rs  user.rs  user_controller.rs  users.rs  wsocket.rs  wsocket_controller.rs
src/database/: mod.rs  mongo.rs  mysql.rs  pg.rs  postgres.rs  source.rs
src/database/ampq/: manager.rs  mod.rs
src/database/redis/: manager.rs  mod.rs
src/emails/: mod.rs  password_changed_email.rs  welcome_email.rs
src/emails/transports/: mod.rs  smtp.rs
src/entities/: Cargo.toml
src/entities/src/: auth.rs  lib.rs  user.rs
src/events/: Cargo.toml  mod.rs  users.rs
src/events/src/: lib.rs
src/events/src/user/: mod.rs  password_changed.rs  registered.rs
src/events/user/: mod.rs  password_changed.rs  registered.rs  user_registered.rs
src/helpers/: Cargo.toml  error.rs  error_helper.rs  mod.rs  password.rs  password_helper.rs  response.rs  token.rs  token_helper.rs
src/helpers/src/: error.rs  lib.rs  password.rs  response.rs  token.rs
src/helpers/validation/: auth.rs  auth_validation.rs  auths.rs  email.rs  email_validation.rs  mod.rs
src/middlewares/: auth.rs  auth_middleware.rs  auths.rs  mod.rs  permit.rs  permit_middleware.rs  request.rs
src/models/: auth.rs  user.rs
src/repositories/: .gitignore  Cargo.toml  auth.rs  auth_repository.rs  mod.rs  user.rs  user_repository.rs
src/repositories/src/: auth.rs  lib.rs  user.rs
src/repositories/src/contracts/: mod.rs
src/router/: mod.rs
src/router/v1/: auths.rs  mod.rs  user.rs  users.rs
src/services/: Cargo.toml  auths.rs  mod.rs  user.rs  user_service.rs  users.rs  wsocket.rs
src/services/src/: auths.rs  lib.rs  users.rs  wsocket.rs
src/services/src/contracts/: mod.rs
src/services/src/helpers/: token.rs
src/services/src/types/: auth_types.rs  mod.rs  user_types.rs
src/state/: app.rs
src/types/: Cargo.toml  auth_types.rs  auths.rs  mod.rs  state.rs  user.rs  user_types.rs
src/types/src/: auth_types.rs  lib.rs  user_types.rs
src/utilities/: Cargo.toml  error.rs  formatter.rs  jwt.rs  mod.rs  rand.rs  validation.rs
src/utilities/src/: error.rs  jwt.rs  lib.rs
src/utilities/validation/: auths.rs  email.rs  mod.rs
templates/: password-changed.hbs  reset-password.hbs  welcome-email.hbs
templates/layouts/: base.hbs
templates/partials/: styles.hbs
