[package]
name = "rust-project-api"
version = "0.1.0"
authors = ["Sofwan Lawal <no@mail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
serde_json = "1"
derive_more = "0.99"
dotenv = "0.15.0"
validator = { version = "0.16", features = ["derive"] }
actix-web-validator = "5"
tokio = "1"
env_logger = "0.10.0"
jsonwebtoken = "8"
ulid = { version = "1", features = ["serde", "uuid"] }
argon2 = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.28"
diesel = { version = "2", features = ["postgres", "extras"] }
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "0.23", features = ["json", "tokio-comp"] }
mobc = { version = "0.8", features = [] }
mobc-redis = "0.8.0"
mongodb = { version = "2.6", features = ["bson-chrono-0_4", "bson-uuid-1", "bson-serde_with"] }
actix = "0.13"
actix-web-actors = "4"
handlebars = "4"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
async-trait = "0.1"
url = "2.4"
lapin = { version = "2.3", features = ["serde_json"] }
async-global-executor = { version = "2.3", features = ["tokio"] }


