[package]
name = "rust-project-api"
version = "0.1.0"
authors = ["Sofwan Lawal <no@mail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web-actors = "4"
actix-web = { version = "4"}
actix-web-validator = "5"
actix-cors = "0.6"
argon2 = "0.5.1"
async-global-executor = { version = "2.3", features = ["tokio"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "0.99", features = [] }
dotenv = "0.15"
futures-util = "0.3"
futures = "0.3"
handlebars = "4"
jsonwebtoken = "8"
lapin = { version = "2", features = ["serde_json"] }
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls", "tracing"] }
log = { version = "0.4" }
mobc = { version = "0.8", features = [] }
mongodb = { version = "2", features = ["bson-chrono-0_4", "bson-uuid-1", "bson-serde_with", "tracing"] }
rand = "0.8"
redis = { version = "0.23", features = ["json", "tokio-comp", "log", "ahash", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio", "runtime-tokio-rustls", "macros", "debug-print" ] }
tracing = { version = "0.1", features = ["log", "async-await", "release_max_level_error"] }
tracing-log = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "tracing-log"] }
tokio = "1"
url = "2"
ulid = { version = "1", features = ["serde", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
