[package]
name = "rust-project-api"
version = "0.1.0"
authors = ["Sofwan Lawal <no@mail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web-actors = "4"
actix-web = { version = "4"}
actix-web-validator = "5"
actix-cors = "*"
argon2 = "*"
async-global-executor = { version = "2.3", features = ["tokio"] }
async-trait = "*"
chrono = { version = "*", features = ["serde"] }
derive_more = { version = "*", features = [] }
dotenv = "*"
futures-util = "*"
futures = "*"
handlebars = "4"
jsonwebtoken = "8"
lapin = { version = "2", features = ["serde_json"] }
lettre = { version = "*", features = ["tokio1", "tokio1-native-tls", "tracing"] }
log = { version = "*" }
mobc = { version = "*", features = [] }
mongodb = { version = "2", features = ["bson-chrono-0_4", "bson-uuid-1", "bson-serde_with", "tracing"] }
rand = "*"
redis = { version = "*", features = ["json", "tokio-comp", "log", "ahash", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "*", features = [ "sqlx-postgres", "runtime-tokio", "runtime-tokio-rustls", "macros", "debug-print" ] }
tracing = { version = "*", features = ["log", "async-await", "release_max_level_error"] }
tracing-log = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter", "fmt", "json", "tracing-log"] }
tokio = "1"
url = "2"
ulid = { version = "1", features = ["serde", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "*", features = ["derive"] }


### Tests
fake = { version = "2", features = ["derive", "chrono", "uuid", "zerocopy"] }


### Internal
common = { path = "src/common" }
api = { path = "src/api" }
