[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "0.99", features = [] }
chrono = { version = "0.4" }
uuid = "1.4.1"



utilities = { path = "../utilities" }

