[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ulid = { version = "1", features = ["serde", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
jsonwebtoken = "8.3"

helpers = { path = "../helpers" }
